<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg"
   >

    <ImageView
        android:id="@+id/yajhz_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yajhz_brand"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/top_rounded_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yajhz_brand"
        android:paddingHorizontal="16dp"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:padding="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/bottom_rounded_bg"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:gravity="center"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_email"
                    android:hint="@string/email_hint"
                    android:background="@drawable/full_rounded_bg"
                    android:padding="16dp"
                    android:layout_marginTop="8dp"
                    android:inputType="textEmailAddress"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/password"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:gravity="center"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_password"
                    android:hint="@string/password_hint"
                    android:background="@drawable/full_rounded_bg"
                    android:padding="16dp"
                    android:layout_marginTop="8dp"
                    android:inputType="textPassword"

                    />

                <Button
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_login"
                    android:background="@drawable/full_rounded_colored_bg"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/signup"
                        android:text="@string/signup"
                        android:textColor="@color/app_color"
                        android:paddingStart="4dp"
                        android:textStyle="bold"
                        />
                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>